# epos4_control

./: 99-epos4.rules  CMakeLists.txt  install_udev_rules  package.xml
include/epos4_control/: epos.h  epos4_control.h  epos4_trajectory_commander.h  epos_manager.h  utils.h
launch/: test1motor.launch  test1motor.urdf  test1motor.yaml  test1motor_traj_control.yaml  test2motors.launch  test2motors.urdf  test2motors.yaml  test2motors_traj_control.yaml
scripts/: gui2.py  gui2.py~  number_driver.py  number_driver.py~
src/nodes/: epos4_control_node.cpp  epos4_trajectory_commander_node.cpp  trajectory_test_node.cpp
src/tools/: get_state.cpp  list_devices.cpp  read_io.cpp
src/util/: epos.cpp  epos.cpp.autosave  epos4_control.cpp  epos4_trajectory_commander.cpp  epos_manager.cpp  utils.cpp
